# rtsp-viewer-qt

./: CMakeLists.txt  README.md  install_qt_dependencies.sh  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
rtsp_player_linux_aarch64/: rtsp_player
rtsp_web_build/: rtsp_player
rtsp_web_build_aarch64/: rtsp_player
